# common/response/response.go
@@ -11,6 +11,10 @@ type Response struct {
 	Data interface{} `json:"data"`
 }
 
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
 func NewResponse(code int, data interface{}) (int, interface{}) {
 	return code, gin.H{
 		"data": data,
@@ -20,5 +24,53 @@ func NewResponse(code int, data interface{}) (int, interface{}) {
 func NewOKResponse(data interface{}) (int, interface{}) {
 	return http.StatusOK, gin.H{
 		"data": data,
+	}
+}
+
+func ServiceUnavailable() (int, interface{}) {
+	return http.StatusServiceUnavailable, gin.H{
+		"error": http.StatusText(http.StatusServiceUnavailable),
+	}
+}
+
+func ServiceUnavailableMsg(msg interface{}) (int, interface{}) {
+	return http.StatusServiceUnavailable, gin.H{
+		"error": msg,
+	}
+}
+
+func BadRequest() (int, interface{}) {
+	return http.StatusBadRequest, gin.H{
+		"error": http.StatusText(http.StatusBadRequest),
+	}
+}
+
+func BadRequestMsg(msg interface{}) (int, interface{}) {
+	return http.StatusBadRequest, gin.H{
+		"error": msg,
+	}
+}
+
+func NotFound() (int, interface{}) {
+	return http.StatusNotFound, gin.H{
+		"error": http.StatusText(http.StatusNotFound),
+	}
+}
+
+func NotFoundMsg(msg interface{}) (int, interface{}) {
+	return http.StatusNotFound, gin.H{
+		"error": msg,
+	}
+}
+
+func Forbidden() (int, interface{}) {
+	return http.StatusForbidden, gin.H{
+		"error": http.StatusText(http.StatusForbidden),
+	}
+}
+
+func Unauthorized() (int, interface{}) {
+	return http.StatusUnauthorized, gin.H{
+		"error": http.StatusText(http.StatusUnauthorized),
 	}
 }
