# docs/swagger.json
@@ -12,6 +12,103 @@
         "version": "0.0"
     },
     "paths": {
+        "/v1/encrypt": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Encrypt"
+                ],
+                "summary": "Encrypt plaintext into ciphertex (using curve secp112r1 as demo)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Plaintext",
+                        "name": "msg",
+                        "in": "query"
+                    },
+                    {
+                        "description": "Keypair",
+                        "name": "priv",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.Keypair"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/keygen": {
+            "get": {
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Key"
+                ],
+                "summary": "Generate key pair (using curve secp112r1 as demo)",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/test": {
             "get": {
                 "consumes": [
@@ -21,17 +118,32 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Auth"
+                    "Test"
                 ],
                 "summary": "Testing API GET method",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/response.Response"
-                            }
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
                         }
                     }
                 }
@@ -39,6 +151,54 @@
         }
     },
     "definitions": {
+        "api.Keypair": {
+            "type": "object",
+            "properties": {
+                "Curve": {
+                    "type": "object",
+                    "properties": {
+                        "B": {
+                            "type": "integer"
+                        },
+                        "BitSize": {
+                            "type": "integer"
+                        },
+                        "Gx": {
+                            "type": "integer"
+                        },
+                        "Gy": {
+                            "type": "integer"
+                        },
+                        "N": {
+                            "type": "integer"
+                        },
+                        "Name": {
+                            "type": "string"
+                        },
+                        "P": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "D": {
+                    "type": "integer"
+                },
+                "X": {
+                    "type": "integer"
+                },
+                "Y": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "response.Response": {
             "type": "object",
             "properties": {
